# moltbot

./: .gitignore  Cargo.toml  README.md
crates/keeperhub-rs/: Cargo.toml  README.md
crates/keeperhub-rs/examples/: aave_supply.rs  call_workflow.rs  list_workflows.rs  morpho_position.rs  publish_aave_risk_check.rs  search_workflows.rs
crates/keeperhub-rs/src/: aave.rs  error.rs  lib.rs  mcp.rs  morpho.rs  rest.rs  types.rs  workflows.rs  x402.rs
crates/keeperhub-rs/tests/: live_mcp.rs
crates/moltbot/: Cargo.toml  LICENSE
crates/moltbot/src/: audit.rs  config.rs  dashboard.rs  job.rs  main.rs  pre_x402.rs  safe_mode.rs  state.rs  telegram.rs  tick.rs  yield_strategy.rs
crates/moltbot/src/jobs/: mod.rs  morpho_health.rs
crates/moltbot/static/: app.js  index.html  style.css
plans/: keeperhub-docs-summary.md  moltbot-deep-research.md  next-steps.md  pr-body.md  pr-to-keeperhub.md  setup-verified.md
scripts/: README.md  create-issues.sh
