[workspace]
resolver = "2"
members = [
    "crates/keeperhub-rs",
    "crates/moltbot",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Adu Akorful <jeffquaye36@gmail.com>"]
repository = "https://github.com/AduAkorful/moltbot"
version = "0.1.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }

# HTTP client (rustls only, no OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Errors
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Database (audit log)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

# Web framework (dashboard)
axum = "0.7"
tower = "0.5"

# IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
