[package]
name = "keeperhub-rs"
version = "0.1.0"
description = "Rust client for the KeeperHub onchain automation platform"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository = { workspace = true }
readme = "README.md"
keywords = ["keeperhub", "blockchain", "automation", "mcp", "x402"]
categories = ["api-bindings", "web-programming", "cryptography::cryptocurrencies"]

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[[example]]
name = "list_workflows"
path = "examples/list_workflows.rs"
