[package]
name = "keeperhub-rs"
version = "0.1.0"
description = "Rust client for the KeeperHub onchain automation platform"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository = { workspace = true }
readme = "README.md"
keywords = ["keeperhub", "blockchain", "automation", "mcp", "x402"]
categories = ["api-bindings", "web-programming", "cryptography::cryptocurrencies"]

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[features]
# Enable live integration tests that hit the real KeeperHub MCP server.
# These require the KEEPERHUB_API_KEY env var to be set. Run with:
#   cargo test --features live-mcp --test live_mcp
live-mcp = []

[[example]]
name = "list_workflows"
path = "examples/list_workflows.rs"

[[example]]
name = "call_workflow"
path = "examples/call_workflow.rs"

[[example]]
name = "search_workflows"
path = "examples/search_workflows.rs"

[[example]]
name = "aave_supply"
path = "examples/aave_supply.rs"

[[example]]
name = "morpho_position"
path = "examples/morpho_position.rs"

[[example]]
name = "publish_aave_risk_check"
path = "examples/publish_aave_risk_check.rs"
