[package]
name = "keeperhub-rs"
version = "0.1.0"
description = "First Rust client for the KeeperHub onchain automation platform. MCP JSON-RPC transport, typed helpers for Aave V3 and Morpho Blue, x402 402-challenge parsing, and pre-built marketplace workflow templates."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository = { workspace = true }
documentation = "https://docs.rs/keeperhub-rs"
readme = "README.md"
keywords = ["keeperhub", "blockchain", "automation", "mcp", "x402", "aave", "morpho", "agent"]
categories = ["api-bindings", "web-programming", "cryptography::cryptocurrencies", "asynchronous"]
include = [
    "src/**/*.rs",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[features]
# Enable live integration tests that hit the real KeeperHub MCP server.
# These require the KEEPERHUB_API_KEY env var to be set. Run with:
#   cargo test --features live-mcp --test live_mcp
live-mcp = []

[[example]]
name = "list_workflows"
path = "examples/list_workflows.rs"

[[example]]
name = "call_workflow"
path = "examples/call_workflow.rs"

[[example]]
name = "search_workflows"
path = "examples/search_workflows.rs"

[[example]]
name = "aave_supply"
path = "examples/aave_supply.rs"

[[example]]
name = "morpho_position"
path = "examples/morpho_position.rs"

[[example]]
name = "publish_aave_risk_check"
path = "examples/publish_aave_risk_check.rs"
