[package]
name = "moltbot"
version = "0.1.0"
description = "The first paying customer of the KeeperHub marketplace — a Rust autonomous agent that funds itself via x402"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = false

[[bin]]
name = "moltbot"
path = "src/main.rs"

[dependencies]
keeperhub-rs = { path = "../keeperhub-rs" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
